<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Прогноз погоды</string>
    <string name="last_updated_with_colon">Последнее обновление:</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="feels_like">Ощущается как</string>
    <string name="connection_error">Ошибка интернет подключения</string>
    <string name="sunrise">Рассвет</string>
    <string name="sunset">Закат</string>
    <string name="wind">Ветер</string>
    <string name="pressure">Давление</string>
    <string name="humidity">Влажность</string>
    <string name="cloudiness">Облачность</string>
    <string name="gps_disconnected">Невозможно получить ваше местоположение. Пожалуйста включите геолокацию чтобы получить новые данные</string>

    // Permissions
    <string name="location_permission_not_granted">Вы запретили доступ к вашему местоположению.</string>
    <string name="location_permission_rationale_title">Не удается получить доступ к вашему местоположению</string>
    <string name="location_permission_rationale_body">Разрешить приложению доступ к вашему местоположению</string>
    <string name="settings_location_permission_rationale_body">Нет доступа к вашему местоположению. Включите разрешение в настройках устройства.</string>

    <string name="go_to_settings">Перейти в настройки</string>
    <string name="not_now">Не сейчас</string>
    <string name="enter_your_city_name">Введите название города</string>
    <string name="auto_locate">Автоопределение</string>
    <string name="all">Все</string>

</resources>